--- a/Views/AppConfiguration.html
+++ b/Views/AppConfiguration.html
@@ -6,27 +6,27 @@
 				<p> CONNECTION <span style="color:black;cursor:pointer" class="glyphicon glyphicon-pencil" data-toggle='modal' data-target='#CONNECTION'></span></p>
 				<div class="col-md-4 col-lg-4">
 					<label>Description</label>
-	  				<p style="color:black;">PROD</p>
+	  				<p style="color:black;">{{Description}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-left:5%;margin-right:10%;">
 					<label>IFS Server URL</label>
-	  				<p style="color:black;">http://ifsapp09:8800</p>
+	  				<p style="color:black;">{{IFSServerUrl}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-right:-20%;">
 					<label>IFS User Name</label>
-	  				<p style="color:black;">eagle4</p>
+	  				<p style="color:black;">{{IFSUserName}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4">
 					<label>IFS User Password</label>
-	  				<p style="color:black;">********</p>
+	  				<p style="color:black;">**********</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-left:5%;margin-right:10%;">
 					<label>Status</label>
-	  				<p style="color:black;">Active</p>
+	  				<p style="color:black;">{{Status}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-right:-20% ">
 					<label>Notes</label>
-	  				<p style="color:black;">Please maintain a steady connection.</p>
+	  				<p style="color:black;">{{Notes}}</p>
 				</div>
 			</div>
 
@@ -34,19 +34,19 @@
 				<p> NOTIFICATION <span style="color:black;cursor:pointer" class="glyphicon glyphicon-pencil" data-toggle='modal' data-target='#NOTIFICATION'></span></p>
 				<div class="col-md-4 col-lg-4">
 					<label>SMTP HOST</label>
-	  				<p style="color:black;">smtp.gmail.com</p>
+	  				<p style="color:black;">{{SmtpHost}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-left:5%;margin-right:10%;">
 					<label>SMTP PORT</label>
-	  				<p style="color:black;">587</p>
+	  				<p style="color:black;">{{SmtpPort}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-right:-20%;">
 					<label>SMTP AUTH</label>
-	  				<p style="color:black;">Enabled</p>
+	  				<p style="color:black;">{{SmtpAuth}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4">
 					<label>User Name</label>
-	  				<p style="color:black;">khagaportal@gmail.com</p>
+	  				<p style="color:black;">{{UserName}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-left:5%;margin-right:10%;">
 					<label>Password</label>
@@ -54,15 +54,15 @@
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-right:-20% ">
 					<label>Email ID</label>
-	  				<p style="color:black;">Khagaportal@gmail.com</p>
+	  				<p style="color:black;">{{Email_id}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4">
 					<label>Status</label>
-	  				<p style="color:black;">Active</p>
+	  				<p style="color:black;">{{STatus}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-left:5%;margin-right:10%;">
 					<label>Notes</label>
-	  				<p style="color:black;">_</p>
+	  				<p style="color:black;">{{NOtes}}</p>
 				</div>
 			</div>
 
@@ -70,39 +70,39 @@
 				<p>COMPANY PROFILE<span style="color:black;cursor:pointer" class="glyphicon glyphicon-pencil" data-toggle='modal' data-target='#COMPANYPROFILE'></span></p>
 				<div class="col-md-4 col-lg-4">
 					<label>Company Name</label>
-	  				<p style="color:black;">EP Minerals</p>
+	  				<p style="color:black;">{{CompanyName}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-left:5%;margin-right:10%;">
 					<label>Company ID</label>
-	  				<p style="color:black;">EP</p>
+	  				<p style="color:black;">{{CompanyId}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-right:-20%;">
 					<label>Email ID</label>
-	  				<p style="color:black;">accounts.payable@epminerals.com</p>
+	  				<p style="color:black;">{{CompanyEmailID}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4">
 					<label>Fax</label>
-	  				<p style="color:black;">787-393-8920</p>
+	  				<p style="color:black;">{{Fax}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-left:5%;margin-right:10%;">
 					<label>Phone No.</label>
-	  				<p style="color:black;">787-393-8920</p>
+	  				<p style="color:black;">{{PhoneNumber}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-right:-20% ">
 					<label>Web Link</label>
-	  				<p style="color:black;">Khagaportal@gmail.com</p>
+	  				<p style="color:black;">{{WebLink}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4">
 					<label>Facebook Link</label>
-	  				<p style="color:black;">htttps://facebook.com/EPMinerals</p>
+	  				<p style="color:black;">{{FacebookLink}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-left:5%;margin-right:10%;">
 					<label>Twitter Link</label>
-	  				<p style="color:black;">https://twitter.com/EPMinerals</p>
+	  				<p style="color:black;">{{TwitterLink}}</p>
 				</div>
 				<div class="col-md-4 col-lg-4" style="margin-right:-20% ">
 					<label>Image Link</label>
-	  				<p style="color:black;">https://87.78.120:8085/content/images/logo.jpg</p>
+	  				<p style="color:black;">{{ImageLink}}</p>
 				</div>
 			</div>
 			
@@ -120,36 +120,36 @@
 	  					<div class="col-lg-12 col-md-12">
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Description</label>
-	  							<input type="text" name="FirstName" placeholder="Enter Description" class="form-control input-sm" style="height:35px;">
+	  							<input type="text" name="FirstName" placeholder="Enter Description" class="form-control input-sm" style="height:35px;" ng-model="Description ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>IFS Server URL</label>
-	  							<input type="text" name="LastName" placeholder="Enter IFS Server URL" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter IFS Server URL" class="form-control input-sm" style="height:35px" ng-model="IFSServerUrl ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>IFS User Name</label>
-	  							<input type="text" name="FirstName" placeholder="Enter IFS User Name" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="FirstName" placeholder="Enter IFS User Name" class="form-control input-sm" style="height:35px" ng-model="IFSUserName  ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>IFS User Password</label>
-	  							<input type="text" name="LastName" placeholder="Enter IFS User Password" class="form-control input-sm" style="height:35px">
+	  							<input type="password" name="LastName" placeholder="Enter IFS User Password" class="form-control input-sm" style="height:35px" ng-model="IFSUserPassword  ">
 	  						</div>
 	  						<div class="col-lg-12 col-md-12">
 	  							<label>Notes</label>
-	  							<input type="text" name="LastName" placeholder="Enter address" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter address" class="form-control input-sm" style="height:35px" ng-model="Notes  ">
 	  				        </div>
 	  				        <div class="col-lg-6 col-md-6">
 	  							<label>Status</label>
-	  							<button style="width:150px">Active</button>
-			                    <button style="width:150px">Inactive</button>
+	  							<button style="width:150px" id='ActiveactiveButton'  ng-click="StatusUpdate('Active',true)">Active</button>
+			                    <button style="width:150px" id='ActiveinactiveButton' ng-click="StatusUpdate('Active',false)" >Inactive</button>
 	  						</div>
 	  					</div>
 	  					
   					</form>	
   				</div>
   				<div class="modal-footer">
-  					<button style="background-color:black;color:#fff;float:left;margin-right:2.5%;border:none;border-radius:2px;width:100px;height:35px;">Apply Filter</button>
-  					<button style="background-color:black;color:#fff;float:left;border:none;border-radius:2px;width:100px;height:35px;">Reset</button>	
+  					<button style="background-color:black;color:#fff;float:left;margin-right:2.5%;border:none;border-radius:2px;width:100px;height:35px;" data-dismiss="modal" ng-click="UpdateConnection()">Apply Filter</button>
+  					<!-- <button style="background-color:black;color:#fff;float:left;border:none;border-radius:2px;width:100px;height:35px;">Reset</button>	 -->
   				</div>
   			</div>
 
@@ -168,44 +168,44 @@
 	  					<div class="col-lg-12 col-md-12">
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>SMTP HOST</label>
-	  							<input type="text" name="FirstName" placeholder="Enter SMTP HOST" class="form-control input-sm" style="height:35px;">
+	  							<input type="text" name="FirstName" placeholder="Enter SMTP HOST" class="form-control input-sm" style="height:35px;" ng-model="SmtpHost ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>SMTP PORT</label>
-	  							<input type="text" name="LastName" placeholder="Enter SMTP PORT" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter SMTP PORT" class="form-control input-sm" style="height:35px" ng-model="SmtpPort ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>SMTP AUTH</label>
-	  							<input type="text" name="FirstName" placeholder="Enter SMTP AUTH" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="FirstName" placeholder="Enter SMTP AUTH" class="form-control input-sm" style="height:35px" ng-model="SmtpAuth ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>User Name</label>
-	  							<input type="text" name="LastName" placeholder="Enter User Name" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter User Name" class="form-control input-sm" style="height:35px" ng-model="UserName ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Password</label>
-	  							<input type="text" name="FirstName" placeholder="Enter Password" class="form-control input-sm" style="height:35px">
+	  							<input type="password" name="FirstName" placeholder="Enter Password" class="form-control input-sm" style="height:35px" ng-model="Password ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Email ID</label>
-	  							<input type="text" name="LastName" placeholder="Enter Email ID" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter Email ID" class="form-control input-sm" style="height:35px" ng-model="Email_id ">
 	  						</div>
 	  						<div class="col-lg-12 col-md-12">
 	  							<label>Notes</label>
-	  							<input type="text" name="LastName" placeholder="Enter address" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter address" class="form-control input-sm" style="height:35px" ng-model="Notes">
 	  				        </div>
 	  				        <div class="col-lg-6 col-md-6">
 	  							<label>Status</label>
-	  							<button style="width:150px">Active</button>
-			                    <button style="width:150px">Inactive</button>
+	  							<button style="width:150px" id='ActiveactiveButton'  ng-click="StatusUpdateNotification('Active',true)">Active</button>
+			                    <button style="width:150px" id='ActiveinactiveButton' ng-click="StatusUpdateNotification('Active',false)" >Inactive</button>
 	  						</div>
 	  					</div>
 	  					
   					</form>	
   				</div>
   				<div class="modal-footer">
-  					<button style="background-color:black;color:#fff;float:left;margin-right:2.5%;border:none;border-radius:2px;width:100px;height:35px;">Apply Filter</button>
-  					<button style="background-color:black;color:#fff;float:left;border:none;border-radius:2px;width:100px;height:35px;">Reset</button>	
+  					<button style="background-color:black;color:#fff;float:left;margin-right:2.5%;border:none;border-radius:2px;width:100px;height:35px;" data-dismiss="modal" ng-click="UpdateNotification()">Apply Filter</button>
+  					<!-- <button style="background-color:black;color:#fff;float:left;border:none;border-radius:2px;width:100px;height:35px;">Reset</button>	 -->
   				</div>
   			</div>
 
@@ -224,47 +224,47 @@
 	  					<div class="col-lg-12 col-md-12">
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Company Name</label>
-	  							<input type="text" name="FirstName" placeholder="Enter Company Name" class="form-control input-sm" style="height:35px;">
+	  							<input type="text" name="FirstName" placeholder="Enter Company Name" class="form-control input-sm" style="height:35px;" ng-model="CompanyName">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Company ID</label>
-	  							<input type="text" name="LastName" placeholder="Enter Company ID" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter Company ID" class="form-control input-sm" style="height:35px" ng-model="CompanyId">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Email ID</label>
-	  							<input type="text" name="FirstName" placeholder="Enter Email ID" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="FirstName" placeholder="Enter Email ID" class="form-control input-sm" style="height:35px" ng-model="CompanyEmailID ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Fax</label>
-	  							<input type="text" name="LastName" placeholder="Enter Fax" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter Fax" class="form-control input-sm" style="height:35px" ng-model="Fax ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Phone No</label>
-	  							<input type="text" name="FirstName" placeholder="Enter Phone No." class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="FirstName" placeholder="Enter Phone No." class="form-control input-sm" style="height:35px" ng-model="PhoneNumber ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Web Link</label>
-	  							<input type="text" name="LastName" placeholder="Enter Web Link" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter Web Link" class="form-control input-sm" style="height:35px" ng-model="WebLink ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Facebook Link</label>
-	  							<input type="text" name="FirstName" placeholder="Enter Facebook Link" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="FirstName" placeholder="Enter Facebook Link" class="form-control input-sm" style="height:35px" ng-model="FacebookLink ">
 	  						</div>
 	  						<div class="col-lg-6 col-md-6">
 	  							<label>Twitter Link</label>
-	  							<input type="text" name="LastName" placeholder="Enter Twitter Link" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter Twitter Link" class="form-control input-sm" style="height:35px" ng-model="TwitterLink ">
 	  						</div>
 	  						<div class="col-lg-12 col-md-12">
 	  							<label>Image Link</label>
-	  							<input type="text" name="LastName" placeholder="Enter Image Link" class="form-control input-sm" style="height:35px">
+	  							<input type="text" name="LastName" placeholder="Enter Image Link" class="form-control input-sm" style="height:35px" ng-model="ImageLink">
 	  				        </div>
 	  					</div>
 	  					
   					</form>	
   				</div>
   				<div class="modal-footer">
-  					<button style="background-color:black;color:#fff;float:left;margin-right:2.5%;border:none;border-radius:2px;width:100px;height:35px;">Apply Filter</button>
-  					<button style="background-color:black;color:#fff;float:left;border:none;border-radius:2px;width:100px;height:35px;">Reset</button>	
+  					<button style="background-color:black;color:#fff;float:left;margin-right:2.5%;border:none;border-radius:2px;width:100px;height:35px;" data-dismiss="modal" ng-click="updateCompanyProfile()">Apply Filter</button>
+  					<!-- <button style="background-color:black;color:#fff;float:left;border:none;border-radius:2px;width:100px;height:35px;">Reset</button> -->	
   				</div>
   			</div>
 
