--- a/Views/home.html
+++ b/Views/home.html
@@ -7,16 +7,16 @@
 			enter business transactions in an online and secure environment.</p>
 			<div class="row" style="margin-top:4%;">
 				<div class="col-lg-6" style="color:#fff">
-				  <label><input type="checkbox" value="" checked disabled> Order Inquiry</label>
+				  <label><input type="checkbox" value="" checked disabled style="width:20px;height:20px;"> Order Inquiry</label>
 				</div>
 				  <div class="col-lg-6" style="color:#fff">
-				  <label><input type="checkbox" value="true" checked disabled> Order Acknowledgement</label>
+				  <label><input type="checkbox" value="true" checked disabled style="width:20px;height:20px;"> Order Acknowledgement</label>
 				</div>
 				<div class="col-lg-6" style="color:#fff">
-				  <label><input type="checkbox" value="true" checked disabled> Invoicing</label>
+				  <label><input type="checkbox" value="true" checked disabled style="width:20px;height:20px;"> Invoicing</label>
 				</div>
 				<div class="col-lg-6" style="color:#fff">
-				  <label><input type="checkbox" value="true" checked disabled> Payment Information</label>
+				  <label><input type="checkbox" value="true" checked disabled style="width:20px;height:20px;"> Payment Information</label>
 				</div>
 			</div>
 		</div>
@@ -154,22 +154,19 @@
 		<p class="Supply_Management_heading">We tweet good.</p>
 		<p class="Supply_Management_sub_heading">Our twiter updates. Follow us to get the best from the domain.</p>
 		<div class="col-lg-12">
-			<div class="col-lg-5" style="margin-left:2%">
+			<div class="col-lg-12" style="margin-left:2%">
 				<div>
-					<p class="Supply_Management_cnt_hed">How GST Impacts your Business?</p>
-					<p class="Supply_Management_cnt">This has been one question bothering everyone. So we compiled the one definitive <a href="" style="color:#2AE555;">Read More</a></p>
+					<p class="Supply_Management_cnt" style="width:100%;">
+						<a class="twitter-timeline"  href="https://twitter.com/search" data-widget-id="937964688507154432" data-height="500" data-width="100%" >Tweets about </a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				</div>
 			</div>
-			<div class="col-lg-2"></div>
-			<div class="col-lg-5" style="margin-right:-2%">
-				<div>
-					<p class="Supply_Management_cnt_hed">Invoicing Tips & Tricks</p>
-					<p class="Supply_Management_cnt">Even though our software makes it real easy for you to invoice better. Here’s the power pack <a href="" style="color:#2AE555;">Read More</a></p>
-				</div>
-			</div>
+			
 		</div>
-		<div class="col-lg-4 loginFields">
-					<input type="submit" class="btn btn-primary" value="Follow us on Twitter for Updates" style="background-color:#00bb28;border-color:#00bb28;">
+		<div class="col-lg-12 loginFields">
+			<div style="margin-left:40%;">
+				<a href="https://twitter.com/Kruzr_co?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @Kruzr_co</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>		
 		</div>
 	</div>
 </section>
