--- a/Views/AutomaticPayment.html
+++ b/Views/AutomaticPayment.html
@@ -1,15 +1,15 @@
-  <link rel="styleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-grid/4.0.7/ui-grid.css"/>
+  <!-- <link rel="styleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-grid/4.0.7/ui-grid.css"/> -->
   <section ng-controller="AutomaticPaymentController" style="background-color: #fafbfc;">
   	<div class="controller">
 		  	<div class="row">
           <div class="col-lg-2">
-  			  	<select class="btn btn-primary" ng-change='viewChange(viewCount)' ng-model='viewCount' ng-init='viewCount=1'>
+  			  <select  ng-change='viewChange(viewCount)' ng-model='viewCount' ng-init='viewCount=1' style="border:none;background-color: #fafbfc;font-family: 'Lato', sans-serif;font-size:24px;color:#4a4a4a;text-align-last:left;direction: rtl; ">
               <option ng-value='0'>Payments</option>
               <option ng-value='1'>Automatic Payments</option>
               <option ng-value='2'>Check Payments</option>
             </select>
           </div>
-			  	<div class="col-lg-2" style="margin-top:1%;float:right;">
+			  	<div class="col-lg-2" style="float:right;">
 			  	     <button ng-click="toggle = !toggle" class="btn-hide">
           					<span ng-show ="toggle" class="glyphicon glyphicon-eye-close" style="background:#294874;border-radius:2px;width:28px;height:28px;color:#fff;padding-top:5px;"></span>
           					<span ng-show ="!toggle" class="glyphicon glyphicon-eye-open" style="background:#294874;border-radius:2px;width:28px;height:28px;color:#fff;padding-top:5px;"></span>
@@ -17,8 +17,8 @@
         			</button>
 			  	</div>
 		  	</div>	    
-  			<div ng-show ="toggle" class="row" style="display:table;width:100%;background-color:#294874;opacity:0.5;margin-left:.2%" data-ng-init="renderCharts()">
-  				<div class="col-lg-3 col-md-3 col-sm-12">
+  			<div ng-show ="toggle" class="row" style="background-color:#294874;opacity:0.5;margin-left:.2%" >
+  			<!-- 	<div class="col-lg-3 col-md-3 col-sm-12">
   					<div class="chartheader">
   						Supplier Payment by Status
   					</div>
@@ -30,37 +30,35 @@
   							<p><svg height="12" width="12"><circle cx="6" cy="6" r="6" fill="#f5a800" /></svg>{{PieClosedPer}}% CLOSED [{{PieClosed}}]</p>
   							<p><svg height="12" width="12"><circle cx="6" cy="6" r="6" fill="#bd10e0" /></svg>{{PieCancelledPer}}% CURRENT [{{PieCancelled}}]</p>
   					</div>
-  				</div>
-  				<div class="col-lg-9 col-md-6 col-sm-12" >
-  					<div class="chartheader">
-  						Month Over Month Distribution - 2017
-  					</div>
-  					<div class="" >
-  						<canvas id="myBarChart"></canvas>
-  					</div>
-  					<div id="js-legend" class="chart-legend"></div>
-
-  				</div>	
-  		
+  				</div> -->
+  				<div class="col-md-12 col-lg-12">
+            <div class="chartheader">
+              Month Over Month Distribution - 2017
+            </div>
+            <div class="" >
+              <canvas style="width:1200px;height:150px;" id="myBarChart"></canvas>
+            </div>
+            <div id="js-legend" class="chart-legend"></div>
   		</div>
+      </div>
   	</div>
   		
   		<div style="background-color: #fafbfc;margin:auto;">
   			<div class="row">
   			<div class="col-md-4 col-lg-4 col-sm-12 ">
-  				<ul class="pagination">
-  					<li><a disabled class="filter_style" style="color:#4a4a4a;">Payment Status : </a></li>
-  					<li id="POSTATUS_0" class="active" style="width:40px;"><a ng-click="filter(0)" class="filter_style">All</a></li>
-  					<li id="POSTATUS_1" class="" style="width:40px;"><a ng-click="filter(1)" class="filter_style">Cashed</a></li>
-  					<li id="POSTATUS_2" class="" style="width:40px;"><a class="filter_style" ng-click="filter(2)">Printed</a></li>
-  					<!-- <li id="POSTATUS_3" class="" style="width:30px;"><a class="filter_style" ng-click="filter(3)">Current</a></li> -->
-  				</ul>
+  				  <ul class="pagination">
+            <li><a disabled class="filter_style" style="color:#4a4a4a;">Payment Status : </a></li>
+            <li id="POSTATUS_0" class="active" style="width:40px;"><a ng-click="selectDateByDays(7)" class="filter_style">ALL</a></li>
+            <li id="POSTATUS_1" class="" style="width:40px;"><a ng-click="selectDateByDays(30)" class="filter_style">Month</a></li>
+            <li id="POSTATUS_2" class="" style="width:40px;"><a ng-click="selectDateByDays(90)" >Last 3 Months</a></li>
+            <!-- <li id="POSTATUS_3" class="" style="width:30px;"><a class="filter_style" ng-click="filter(3)">Current</a></li> -->
+          </ul>
   			</div>
   			<div class="col-md-4 col-lg-4 col-sm-12">
   				<ul class="pagination">
   					<li style="border-color:none;background-color:#fafbfc;color:#4a4a4a;"><a disabled class="filter_style" >Between</a></li>
-  					<li id="POSTATUS_1" class="" style="width:30px;"><input class="filter_style" type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" placeholder="From Date" ng-change="selectdate()" ng-model="fromdatesearch"></li>
-  					<li id="POSTATUS_2" class="" style="width:30px;"><input class="filter_style"  type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" placeholder="End Date" ng-change="selectdate()" ng-model="enddatesearch"></li>
+  					<li id="POSTATUS_1" class="" style="width:30px;"><input class="filter_style" type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" placeholder="Start Date" ng-change="selectdate()" ng-model="requisitionDatesearch"></li>
+  					<li id="POSTATUS_2" class="" style="width:30px;"><input class="filter_style"  type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" placeholder="End Date" ng-change="selectdate()" ng-model="requisitionDateEndsearch"></li>
   				</ul>
   			</div>
   			<div class="col-md-3 col-lg-3 col-sm-12" style="margin-left: -6%;">
@@ -84,7 +82,7 @@
   			
   			<div class="col-lg-12">
 				<div class="col-md-4 col-lg-4 col-sm-12">
-					<input type="text" name="" placeholder="Search with Po Number, Order Status, Comapny,Buyer Name" ng-keyup="search()" class="form-control" style="width: 90%;margin-left:-4%;" ng-model="searchKeywords">
+					<input type="text" name="" placeholder="Search by Payment Id, Company,Payment Date ..." ng-keyup="search()" class="form-control" style="width: 90%;margin-left:-4%;" ng-model="searchKeywords">
 				</div>
 		        <div class="col-md-8 col-lg-8 col-sm-12">
 		          <input type="text" name="" readonly="true" placeholder="Drag a column to Group by" class="form-control" style="margin-left:-1%;">
@@ -99,28 +97,28 @@
   		</div>
 
   	 <div id="CreateFilter" class="modal fade" role="dialog">
-      <div class="modal-dialog" style="margin-left:20%;margin-top:10%;">
+      <div class="modal-dialog" style="margin-left:25%;margin-top:10%;">
         <div class="modal-content">
-          <div style="width:800px; background-color:#fff;">
+          <div style=" background-color:#fff;">
             <form>
             <div class="modal-header">
               <button style="background:blue;color:#fff ;width:20px;height:20px;border-radius:10px" type="button" class="close" data-dismiss="modal">&times;</button>
               <p class="Create-Filter-Modal-Title"><b>Create Filter</b></p>
             </div>
             <div class="modal-body">
-              <div class="popupCard" style="">
+              <div class="popupCard" style="width:400px;margin-left:12%;">
               <div class="row">
                <div style="display:inline;margin-left:8%;margin-top:2%;">
-                  <a class="popupCardHeader">Group 1</a>
-                  <p class="popupCardHeaderSub" style="margin-left:8%;">All conditions must be met.</p>
+                  <a class="popupCardHeader">All conditions must be met.</a>
+                  <!-- <p class="popupCardHeaderSub" style="margin-left:8%;">All conditions must be met.</p> -->
                </div>
                <div style="display:inline;">
-                  <select ng-options='condition for condition in conditions' ng-model='selectedCondition' class="btn btn-primary" style="width:80px;margin-top:-25%;margin-left:60%;height:30px; "></select>
+                  <select ng-options='condition for condition in conditions' ng-model='selectedCondition' class="btn btn-primary" style="width:100px;margin-top:-5%;margin-left:70%;height:30px; "></select>
                </div></div>
                <div >
-                 <select ng-options='selectcolmn.id as selectcolmn.title for selectcolmn in columnArray' ng-model='selectedColumn1' class="btn" placeholder="Choose Column" style="margin:2%;border-color:#B1B6B6;border-radius:5px;"></select>
-                  <select ng-options='selectcolmn.id as selectcolmn.title for selectcolmn in columnArray' ng-model='selectedColumn2' class="btn" placeholder="Choose Column" style="margin:2%;border-color:#B1B6B6;border-radius:5px;"></select>
-                  <input type="text" name="createFilterValue" placeholder="Write the Value for these filters" ng-model='createFilterValue' style="margin:2%;width:98%;border-color:#B1B6B6;border-radius:5px;" required>
+                 <select ng-options='selectcolmn.id as selectcolmn.title for selectcolmn in columnArray' ng-model='selectedColumn1' class="btn" placeholder="Choose Column" style="margin:2%;border-color:#B1B6B6;border-radius:5px;width:97%;"></select>
+                  <select ng-options='selectcolmn.id as selectcolmn.title for selectcolmn in columnArray' ng-model='selectedColumn2' class="btn" placeholder="Choose Column" style="margin:2%;border-color:#B1B6B6;border-radius:5px;width:97%;"></select>
+                  <input type="text" name="createFilterValue" placeholder="Write the Value for these filters" ng-model='createFilterValue' style="margin:2%;width:97%;border-color:#B1B6B6;border-radius:5px;height:30px;" required>
                </div>
             </div>
          
@@ -135,7 +133,6 @@
         </div>
       </div>
     </div>
-
 
   	<div id="hideColumnModal" class="modal fade" role="dialog">
   		<div class="modal-dialog">
