--- a/Views/SupplierInvoice.html
+++ b/Views/SupplierInvoice.html
@@ -1,15 +1,22 @@
   <link rel="styleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-grid/4.0.7/ui-grid.css"/>
   <section ng-controller="SupplierInvoiceController" style="background-color: #fafbfc;">
+    
   	<div class="controller">
+     
 		  	<div class="row">
-			  	<div class="col-lg-8 col-md-8"><h3>Supplier Invoice</h3></div>
-			  	<div class="col-lg-4 col-md-4" style="margin-top:1%;float:right;">
-               <button style="margin-left:30%;"><a href="#!/CreateInvoice">Create Invoice</a></button>
-			  	     <button ng-click="toggle = !toggle" class="btn-hide">
-          					<span ng-show ="toggle" class="glyphicon glyphicon-eye-close" style="background:#294874;border-radius:2px;width:28px;height:28px;color:#fff;padding-top:5px;"></span>
-          					<span ng-show ="!toggle" class="glyphicon glyphicon-eye-open" style="background:#294874;border-radius:2px;width:28px;height:28px;color:#fff;padding-top:5px;"></span>
-          					{{toggleText}}
-        			</button>
+			  	<div class="col-lg-2">
+        <select  ng-change='viewChange(viewCount)' ng-model='viewCount' ng-init='viewCount=0' style="border:none;background-color: #fafbfc;font-family: 'Lato', sans-serif;font-size:24px;color:#4a4a4a;text-align-last:left;direction: rtl; ">
+         <option ng-value='0'>PO Invoice</option>
+         <option ng-value='1'>Non PO Invoice</option>
+      </select>
+  </div>
+			  	<div class="col-lg-3 col-md-3" style="float:right;">
+			  	     <button ng-click="toggle = !toggle" class="btn-hide" style="margin-top:-1%;float:right;">
+                    <span ng-show ="toggle" class="glyphicon glyphicon-eye-close" style="background:#294874;border-radius:2px;width:28px;height:28px;color:#fff;padding-top:5px;"></span>
+                    <span ng-show ="!toggle" class="glyphicon glyphicon-eye-open" style="background:#294874;border-radius:2px;width:28px;height:28px;color:#fff;padding-top:5px;"></span>
+                    {{toggleText}}
+              </button>
+               <button class="btn-custom-k" style="background:#294874;"><a href="#!/CreateInvoice" style="color:#fff;float:right;">Create Invoice</a></button>
              
 			  	</div>
 		  	</div>	    
@@ -18,23 +25,40 @@
   					<div class="chartheader">
   						Supplier Invoice by Status
   					</div>
-  					<div  style="height:110px;width:110px;margin-top:4%;margin-left:0%;display: inline-block;">
-  						<canvas id="myPieChart"></canvas>
-  					</div>
-  					<div class="pielegend">
-  							<p><svg height="12" width="12"><circle cx="6" cy="6" r="6" fill="#f8e71c" /></svg>{{PieActivePer}}% ACTIVE [{{PieActive}}]</p>
-  							<p><svg height="12" width="12"><circle cx="6" cy="6" r="6" fill="#f5a800" /></svg>{{PieClosedPer}}% CLOSED [{{PieClosed}}]</p>
-  							<p><svg height="12" width="12"><circle cx="6" cy="6" r="6" fill="#bd10e0" /></svg>{{PieCancelledPer}}% CURRENT [{{PieCancelled}}]</p>
-  					</div>
+  					     <div class="col-md-6 col-lg-6" >
+              <div style="margin-left:-13%;">
+                <canvas id="myPieChart"></canvas>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+              <div style="color:#ffffff;margin-left:-15%;margin-right:-10%;margin-top:25%;">
+              <table style=" border: 1px solid white; width:115%;">
+                <tr style=" border: 1px solid white;">
+                  <td style=" border: 1px solid white;"><svg height="12" width="12"><circle cx="6" cy="6" r="6" fill="#bd10e0" /></svg></td>
+                  <td style=" border: 1px solid white;">PAIDPOSTED</td>
+                  <td style=" border: 1px solid white;">{{PiePaidPosted}}</td>
+                  <td style=" border: 1px solid white;">{{PiePaidPostedPer}}%</td>
+                </tr>
+                <tr style=" border: 1px solid white;background:none">
+                  <td style=" border: 1px solid white;"><svg height="12" width="12"><circle cx="6" cy="6" r="6" fill="#f8e71c" /></svg></td>
+                  <td style=" border: 1px solid white;">POSTEDAUTH</td>
+                  <td style=" border: 1px solid white;">{{PiePostedAuth}}</td>
+                  <td style=" border: 1px solid white;">{{PiePostedAuthPer}}%</td>
+                </tr>
+              </table>
+            </div>
+              
+            </div>
   				</div>
   				<div class="col-lg-9 col-md-6 col-sm-12" >
-  					<div class="chartheader">
-  						Month Over Month Distribution - 2017
-  					</div>
-  					<div class="" >
-  						<canvas id="myBarChart"></canvas>
-  					</div>
-  					<div id="js-legend" class="chart-legend"></div>
+  				 <div class="vl" style="margin-top:-1%; height:210px;margin-bottom:-210px"></div>
+            <div class="chartheader" style="margin-top:1%;">
+              Month Over Month Distribution - 2017
+            </div>
+            <div class="" >
+              <canvas id="myBarChart"></canvas>
+            </div>
+            <div id="js-legend" class="chart-legend"></div>
 
   				</div>	
   		
@@ -47,16 +71,16 @@
   				<ul class="pagination">
   					<li><a disabled class="filter_style" style="color:#4a4a4a;">Invoice Status : </a></li>
   					<li id="POSTATUS_0" class="active" style="width:40px;"><a ng-click="filter(0)" class="filter_style">All</a></li>
-  					<li id="POSTATUS_1" class="" style="width:40px;"><a ng-click="filter(1)" class="filter_style">Cashed</a></li>
-  					<li id="POSTATUS_2" class="" style="width:40px;"><a class="filter_style" ng-click="filter(2)">Printed</a></li>
+  					<li id="POSTATUS_1" class="" style="width:40px;"><a ng-click="filter(1)" class="filter_style">PaidPosted</a></li>
+  					<li id="POSTATUS_2" class="" style="width:40px;"><a class="filter_style" ng-click="filter(2)">PostedAuth</a></li>
   					<!-- <li id="POSTATUS_3" class="" style="width:30px;"><a class="filter_style" ng-click="filter(3)">Current</a></li> -->
   				</ul>
   			</div>
   			<div class="col-md-4 col-lg-4 col-sm-12">
   				<ul class="pagination">
   					<li style="border-color:none;background-color:#fafbfc;color:#4a4a4a;"><a disabled class="filter_style" >Between</a></li>
-  					<li id="POSTATUS_1" class="" style="width:30px;"><input class="filter_style" type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" placeholder="Due Date" ng-change="selectdate()" ng-model="Due_Datesearch"></li>
-  					<li id="POSTATUS_2" class="" style="width:30px;"><input class="filter_style"  type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" placeholder="Due Date" ng-change="selectdate()" ng-model="Due_DateEndsearch"></li>
+  					<li id="POSTATUS_1" class="" style="width:30px;"><input class="filter_style" type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" placeholder="Start Date" ng-change="selectdate()" ng-model="requisitionDatesearch"></li>
+  					<li id="POSTATUS_2" class="" style="width:30px;"><input class="filter_style"  type="text" onfocus="(this.type='date')" onfocusout="(this.type='text')" placeholder="End Date" ng-change="selectdate()" ng-model="requisitionDateEndsearch"></li>
   				</ul>
   			</div>
   			<div class="col-md-3 col-lg-3 col-sm-12" style="margin-left: -6%;">
@@ -79,7 +103,7 @@
   			
   			<div class="col-lg-12">
 				<div class="col-md-4 col-lg-4 col-sm-12">
-					<input type="text" name="" placeholder="Search with Po Number, Order Status, Comapny,Buyer Name" ng-keyup="search()" class="form-control" style="width: 90%;margin-left:-4%;" ng-model="searchKeywords">
+					<input type="text" name="" placeholder="Search by Invoice No,Supplier Id,Supplier Name,Company ..." ng-keyup="search()" class="form-control" style="width: 90%;margin-left:-4%;" ng-model="searchKeywords">
 				</div>
 		        <div class="col-md-8 col-lg-8 col-sm-12">
 		          <input type="text" name="" readonly="true" placeholder="Drag a column to Group by" class="form-control" style="margin-left:-1%;">
@@ -87,37 +111,38 @@
   			</div>
   			<div class="col-md-12 col-lg-12 col-sm-12">
   				<div class="" style="margin-top:1%">
-  					<div id="grid1" ui-grid="gridOptions" ui-grid-pagination ui-grid-move-columns ui-grid-exporter ui-grid-resize-columns ui-grid-move-columns ui-grid-empty-base-layer  ui-grid-pinning class="myGrid "></div>
+  					<div id="grid1" ui-grid="gridOptions" ui-grid-pagination ui-grid-move-columns ui-grid-exporter ui-grid-resize-columns ui-grid-move-columns ui-grid-empty-base-layer  ui-grid-pinning ui-grid-grouping class="myGrid "></div>
   				</div>
   			</div>
   		</div>
   		</div>
 
     <div id="CreateFilter" class="modal fade" role="dialog">
-      <div class="modal-dialog" style="margin-left:20%;margin-top:10%;">
+      <div class="modal-dialog" style="margin-left:25%;margin-top:10%;">
         <div class="modal-content">
-          <div style="width:800px; background-color:#fff;">
+          <div style=" background-color:#fff;">
             <form>
             <div class="modal-header">
               <button style="background:blue;color:#fff ;width:20px;height:20px;border-radius:10px" type="button" class="close" data-dismiss="modal">&times;</button>
               <p class="Create-Filter-Modal-Title"><b>Create Filter</b></p>
             </div>
             <div class="modal-body">
-              <div class="popupCard" style="">
+              <div class="popupCard" style="width:400px;margin-left:12%;">
               <div class="row">
                <div style="display:inline;margin-left:8%;margin-top:2%;">
-                  <a class="popupCardHeader">Group 1</a>
-                  <p class="popupCardHeaderSub" style="margin-left:8%;">All conditions must be met.</p>
+                  <a class="popupCardHeader">All conditions must be met.</a>
+                  <!-- <p class="popupCardHeaderSub" style="margin-left:8%;">All conditions must be met.</p> -->
                </div>
                <div style="display:inline;">
-                  <select ng-options='condition for condition in conditions' ng-model='selectedCondition' class="btn btn-primary" style="width:80px;margin-top:-25%;margin-left:60%;height:30px; "></select>
+                  <select ng-options='condition for condition in conditions' ng-model='selectedCondition' class="btn btn-primary" style="width:100px;margin-top:-5%;margin-left:70%;height:30px; "></select>
                </div></div>
                <div >
-                 <select ng-options='selectcolmn.id as selectcolmn.title for selectcolmn in columnArray' ng-model='selectedColumn1' class="btn" placeholder="Choose Column" style="margin:2%;border-color:#B1B6B6;border-radius:5px;"></select>
-                  <select ng-options='selectcolmn.id as selectcolmn.title for selectcolmn in columnArray' ng-model='selectedColumn2' class="btn" placeholder="Choose Column" style="margin:2%;border-color:#B1B6B6;border-radius:5px;"></select>
-                  <input type="text" name="createFilterValue" placeholder="Write the Value for these filters" ng-model='createFilterValue' style="margin:2%;width:98%;border-color:#B1B6B6;border-radius:5px;" required>
+                 <select ng-options='selectcolmn.id as selectcolmn.title for selectcolmn in columnArray' ng-model='selectedColumn1' class="btn" placeholder="Choose Column" style="margin:2%;border-color:#B1B6B6;border-radius:5px;width:97%;"></select>
+                  <select ng-options='selectcolmn.id as selectcolmn.title for selectcolmn in columnArray' ng-model='selectedColumn2' class="btn" placeholder="Choose Column" style="margin:2%;border-color:#B1B6B6;border-radius:5px;width:97%;"></select>
+                  <input type="text" name="createFilterValue" placeholder="Write the Value for these filters" ng-model='createFilterValue' style="margin:2%;width:97%;border-color:#B1B6B6;border-radius:5px;height:30px;" required>
                </div>
             </div>
+         
             </div>
             <div class="modal-footer">
                   <button type="button" class="btn btn-default" ng-click='createFilterApply()' data-dismiss="modal" style="background:#4fc160;box-shadow:0 1px 2px 0 rgba(0,0,0,0.10);border-radius:2px;width:121px;height:35px;font-family:'Lato', sans-serif;font-size:16px;color:#ffffff;letter-spacing:0;text-align:center;float:left;border: none;">Apply</button>
