--- a/Views/ViewMyprofile.html
+++ b/Views/ViewMyprofile.html
@@ -33,22 +33,22 @@
 	  						<div class="row">
 		  						<div class="col-lg-6 col-md-6 ">
 		  							<label>Current Password</label>
-		  							<input type="text" name="FirstName" placeholder="Enter Current Password" class="form-control input-sm" style="height:35px;">
+		  							<input type="password" name="FirstName" placeholder="Enter Current Password" class="form-control input-sm" ng-model="oldPassword" style="height:35px;">
 		  						</div>
 	  						</div>
 	  						<div class="row">
 		  						<div class="col-lg-6 col-md-6" style="margin-left:0%;">
 		  							<label>New Password</label>
-		  							<input type="text" name="FirstName" placeholder="Enter New Password" class="form-control input-sm" style="height:35px">
+		  							<input type="password" name="FirstName" placeholder="Enter New Password" class="form-control input-sm" ng-model="newPassword" style="height:35px">
 		  						</div>
 		  						<div class="col-lg-6 col-md-6">
 		  							<label>Confirm New Password</label>
-		  							<input type="text" name="LastName" placeholder="Confirm New Password" class="form-control input-sm" style="height:35px">
+		  							<input type="password" name="LastName" placeholder="Confirm New Password" class="form-control input-sm" ng-model="confirmPassword" style="height:35px">
 		  						</div>
 		  					</div>
 	  						<div class="col-lg-12 col-md-12">
 	  							<div class="col-lg-6 col-md-6">
-	  								<button style="background-color:black;color:#fff;float:left;margin-right:2.5%;border:none;border-radius:5px;width:150px;height:35px;">Change Password</button>
+	  								<button style="background-color:black;color:#fff;float:left;margin-right:2.5%;border:none;border-radius:5px;width:150px;height:35px;" ng-click='changePassowrd()'>Change Password</button>
   									<button style="background-color:black;color:#fff;float:left;border:none;border-radius:5px;width:150px;height:35px;">Cancel</button>
 	  				            </div>
 	  					    </div>
